-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 9.0.0-beta1
-
None
-
Windows
-
9e16e694ee (qt-creator/qt-creator/master) 9e16e694ee (qt-creator/qt-creator/qds-dev) 9e16e694ee (qt-creator/qt-creator/9.0)
When trying to create a scratch buffer, it fails with the following warning message:
Unable to create the directory C:\Users\orgads\AppData\Local\Temp\scratch-CCjPBG.txt\C:\Users\orgads\AppData\Local\Temp.
| For Gerrit Dashboard: QTCREATORBUG-28145 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 430911,2 | ProjectExplorer: Fix scratch buffer creation | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |