ProjectExplorer: Fix scratch buffer creation

Amends 389b1eceb.

Fixes: QTCREATORBUG-28145
Change-Id: I9e0075b1031fbe42d4d48b9dee0a80d85378cf17
Reviewed-by: Orgad Shaneh <orgads@gmail.com>